--- a/datacleaner/index.html
+++ b/datacleaner/index.html
@@ -246,7 +246,7 @@
   </div>
   
   <script>
-    const API_BASE_URL = 'http://localhost:5001';
+    const API_BASE_URL = window.location.origin.includes('localhost') ? 'http://localhost:5001' : 'https://datacleaner.apextsgroup.com';
     
     function showLogin() {
       document.getElementById('login-section').style.display = 'block';
