--- a/datacleaner/dashboard/index.html
+++ b/datacleaner/dashboard/index.html
@@ -101,7 +101,7 @@
   
   <script src="/assets/site.js"></script>
   <script>
-    const API_BASE_URL = window.location.origin.includes('localhost') ? 'http://localhost:5001' : 'https://datacleaner.apextsgroup.com';
+    const API_BASE_URL = 'http://localhost:5001';
     
     // Check authentication
     const token = localStorage.getItem('auth_token');
